# wanderer

./: README.md
docs/: hardware_installation.md  misc.md  software_install.md  software_prep.md
wanderer_description/: CMakeLists.txt  package.xml
wanderer_gazebo/: CMakeLists.txt  package.xml
wanderer_gazebo/launch/: wanderer_frame.launch
wanderer_gazebo/worlds/: wanderer.world
wanderer_navigation/: CMakeLists.txt  package.xml
wanderer_navigation/scripts/: .#go_home.py  Wanderer.py  go_home.py  go_home_v2.py  module_test.py  qnet_train.py  tf_listener.py  tf_publisher.py  tf_publisher.py~  utils.py
wanderer_navigation/src/: go_home.py  tf_listener.py
